--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     tools:context="com.github.isuperred.activity.MainActivity">
 
 
+    <!--Tab选项栏-->
     <com.github.isuperred.widgets.TabHorizontalGridView
         android:id="@+id/hg_title"
         android:layout_width="match_parent"
